--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             position: relative;
             width: 80%;
             margin: 20px auto;
+            display: none; /* Hide video container initially */
         }
         video {
             width: 100%;
@@ -83,12 +84,12 @@
     </style>
 </head>
 <body>
-    <img id="sushiImage" src="sushi1.jpg" alt="Sushi Image">
+    <img id="sushiImage" src="sushi1.jpeg" alt="Sushi Image">
     <button onclick="nextImage()">Next</button>
 
     <div id="videoContainer">
         <video controls>
-            <source src="video.mp4" type="video/mp4">
+            <source src="your-video-file.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="icon icon1">💖</div>
@@ -103,10 +104,12 @@
 
         function nextImage() {
             currentImageIndex++;
-            if (currentImageIndex > 10) {
-                currentImageIndex = 1;
+            if (currentImageIndex <= 10) {
+                document.getElementById('sushiImage').src = `sushi${currentImageIndex}.jpeg`;
+            } else {
+                document.getElementById('sushiImage').style.display = 'none';
+                document.getElementById('videoContainer').style.display = 'block';
             }
-            document.getElementById('sushiImage').src = `sushi${currentImageIndex}.jpg`;
         }
     </script>
 </body>
