--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <div id="videoContainer">
         <video controls>
-            <source src="your-video-file.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="icon icon1">💖</div>
