--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
             margin: 0;
             font-family: Arial, sans-serif;
             overflow: hidden;
+            background-color: #f5f5f5;
         }
         img {
-            max-width: 400%; /* 5 times larger than 80% */
-            max-height: 400%; /* 5 times larger than 80% */
+            width: 100%; /* Sushi photos take up the full width of the screen */
+            height: auto; /* Maintain aspect ratio */
+            max-height: 90vh; /* Sushi photos take up almost the entire height */
             margin-bottom: 20px;
         }
         button {
@@ -32,12 +34,14 @@
         }
         #videoContainer {
             position: relative;
-            width: 80%;
+            width: 50%; /* Video takes up half the screen width */
+            max-height: 50vh; /* Limit the height of the video */
             margin: 20px auto;
             display: none; /* Hide video container initially */
         }
         video {
             width: 100%;
+            height: 100%;
             border-radius: 10px;
         }
         .icon {
